--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,45 @@
+div{
+  font-size:20px;
+}
+h1{
+  font-size:30px;
+}
+h2{
+  font-size:28px;
+}
+h3{
+  font-size:26px;
+}
+h4, h5{
+  font-size:24px ;
+}
+li{
+  font-size:22px ;
+}
+
 @media (max-width: 480px) { 
-  font-size:14px !important;
   div{
-    font-size:14px !important;
+    font-size:14px;
   }
   h1{
-    font-size:20px !important;
+    font-size:20px ;
   }
   h2{
-    font-size:18px !important;
+    font-size:18px;
   }
   h3{
-    font-size:17px !important;
+    font-size:17px;
   }
   h4, h5{
-    font-size:15px !important;
+    font-size:15px;
   }
   li{
-    font-size:16px !important;
+    font-size:16px;
   }
   button{
-    padding:5px !important;
+    padding:5px;
+  }
+  a{
+    font-size: 15px;;
   }
 }
