--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 div{
-  font-size:20px;
+  font-size:18px;
 }
 h1{
   font-size:30px;
@@ -10,11 +10,14 @@ h2{
 h3{
   font-size:26px;
 }
-h4, h5{
-  font-size:24px ;
+h4{
+  font-size:22px ;
+}
+h5{
+  font-size:20px ;
 }
 li{
-  font-size:22px ;
+  font-size:20px ;
 }
 
 @media (max-width: 480px) { 
