--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,49 @@
-div{
-  font-size:18px;
+div {
+  font-size: 18px;
 }
-h1{
-  font-size:30px;
+h1 {
+  font-size: 30px;
 }
-h2{
-  font-size:28px;
+h2 {
+  font-size: 28px;
 }
-h3{
-  font-size:26px;
+h3 {
+  font-size: 26px;
 }
-h4{
-  font-size:22px ;
+h4 {
+  font-size: 22px;
 }
-h5{
-  font-size:20px ;
+h5 {
+  font-size: 20px;
 }
-li{
-  font-size:20px ;
+li {
+  font-size: 20px;
 }
 
-@media (max-width: 480px) { 
-  div{
-    font-size:14px;
+@media (max-width: 480px) {
+  div {
+    font-size: 14px;
   }
-  h1{
-    font-size:20px ;
+  h1 {
+    font-size: 20px;
   }
-  h2{
-    font-size:18px;
+  h2 {
+    font-size: 18px;
   }
-  h3{
-    font-size:17px;
+  h3 {
+    font-size: 17px;
   }
-  h4, h5{
-    font-size:15px;
+  h4,
+  h5 {
+    font-size: 15px;
   }
-  li{
-    font-size:16px;
+  li {
+    font-size: 16px;
   }
-  button{
-    padding:5px;
+  button {
+    padding: 5px;
   }
-  a{
-    font-size: 15px;;
+  a {
+    font-size: 15px;
   }
 }
