--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -13,10 +13,10 @@ a {
 }
 
 a:hover {
-  color:inherit;
+  color: inherit;
   text-decoration: none;
 }
 
-li{
+li {
   list-style: none;
 }
