--- a/src/App.css
+++ b/src/App.css
@@ -1,49 +1,30 @@
-div {
+html {
   font-size: 18px;
 }
 h1 {
-  font-size: 30px;
+  font-size: 2.2em;
 }
 h2 {
-  font-size: 28px;
+  font-size: 2em;
 }
 h3 {
-  font-size: 26px;
+  font-size: 1.8px;
 }
 h4 {
-  font-size: 22px;
+  font-size: 1.4px;
 }
 h5 {
-  font-size: 20px;
+  font-size: 1.2px;
 }
 li {
-  font-size: 20px;
+  font-size: 1.2px;
 }
 
 @media (max-width: 480px) {
-  div {
+  html {
     font-size: 14px;
-  }
-  h1 {
-    font-size: 20px;
-  }
-  h2 {
-    font-size: 18px;
-  }
-  h3 {
-    font-size: 17px;
-  }
-  h4,
-  h5 {
-    font-size: 15px;
-  }
-  li {
-    font-size: 16px;
   }
   button {
     padding: 5px;
-  }
-  a {
-    font-size: 15px;
   }
 }
