--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,52 @@
 html {
   font-size: 18px;
 }
+div {
+  font-size: 18px;
+}
 h1 {
-  font-size: 2.2em;
+  font-size: 30px;
 }
 h2 {
-  font-size: 2em;
+  font-size: 28px;
 }
 h3 {
-  font-size: 1.8px;
+  font-size: 26px;
 }
 h4 {
-  font-size: 1.4px;
+  font-size: 22px;
 }
 h5 {
-  font-size: 1.2px;
+  font-size: 20px;
 }
 li {
-  font-size: 1.2px;
+  font-size: 20px;
 }
 
 @media (max-width: 480px) {
-  html {
+  div {
     font-size: 14px;
+  }
+  h1 {
+    font-size: 20px;
+  }
+  h2 {
+    font-size: 18px;
+  }
+  h3 {
+    font-size: 17px;
+  }
+  h4,
+  h5 {
+    font-size: 15px;
+  }
+  li {
+    font-size: 16px;
   }
   button {
     padding: 5px;
+  }
+  a {
+    font-size: 15px;
   }
 }
